ft : div-element created the first two divs

--- a/barber_section.html
+++ b/barber_section.html
@@ -43,7 +43,7 @@
             </div>
         </div>
       </nav>
-   <!-- <div class="first">
+    <div class="first">
         <h3>Guris Barber</h3>
         <h2>Premium Barbershop Services</h2>
     </div>
@@ -58,7 +58,7 @@
 
     </div>
 
-   <div id="alone"> <button>Our Barber Services</button></div>
+  <!-- <div id="alone"> <button>Our Barber Services</button></div>
 
     <div class="third">
         <div class='third1'>
