ft: div-element added the third div

--- a/barber_section.html
+++ b/barber_section.html
@@ -58,7 +58,7 @@
 
     </div>
 
-  <!-- <div id="alone"> <button>Our Barber Services</button></div>
+   <div id="alone"> <button>Our Barber Services</button></div>
 
     <div class="third">
         <div class='third1'>
@@ -115,7 +115,7 @@
          </div>
 </div>
 
-     <div class="fourth">
+    <!-- <div class="fourth">
         <p>Save 20% on Spa</p>
         <p>Our Beauty Care Products Leaves You Fresher Than Before !</p>
         <img src="./images/aovshey-beard-oilbeard-growth-oil-for-men-beard-growth-serum-stimulate-beard-growth-promote-hair-regrowth-facial-hair-treatment-full-longer-masculine-thick-male-beard-60ml.jpg"
