ft:div-element added the fourth div with more images and a description

--- a/barber_section.html
+++ b/barber_section.html
@@ -79,23 +79,23 @@
                 </div>
         </div>
          
-            <div class="third2">
-                <div>
-                    <img src="./images/Screenshot from 2022-02-08 00-00-37.png" height="" alt="">
-                    <H3>Hair straightening</H3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
+        <div class="third2">
+                    <div>
+                        <img src="./images/Screenshot from 2022-02-08 00-00-37.png" height="" alt="">
+                        <H3>Hair straightening</H3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
+                    </div>
+                    <div>
+                        <img src="./images/Screenshot from 2022-02-08 00-00-47.png" height="" alt="">
+                        <H3>Haircut Styling</H3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
+                    </div>
+                    <div>
+                        <img src="./images/Screenshot from 2022-02-07 23-59-39.png" height="" alt="">
+                        <H3>Haircut Styling</H3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="./images/Screenshot from 2022-02-08 00-00-47.png" height="" alt="">
-                    <H3>Haircut Styling</H3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
-                </div>
-                <div>
-                    <img src="./images/Screenshot from 2022-02-07 23-59-39.png" height="" alt="">
-                    <H3>Haircut Styling</H3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
-                </div>
-             </div>
          <div class="third3">
             <div>
                 <img src="./images/Screenshot from 2022-02-08 00-00-37.png" height="" alt="">
@@ -115,7 +115,7 @@
          </div>
 </div>
 
-    <!-- <div class="fourth">
+     <div class="fourth">
         <p>Save 20% on Spa</p>
         <p>Our Beauty Care Products Leaves You Fresher Than Before !</p>
         <img src="./images/aovshey-beard-oilbeard-growth-oil-for-men-beard-growth-serum-stimulate-beard-growth-promote-hair-regrowth-facial-hair-treatment-full-longer-masculine-thick-male-beard-60ml.jpg"
@@ -125,36 +125,39 @@
         height="200px" alt="">
 
     </div> 
-     <div class="fifth">
+    <!-- <div class="fifth">
         <p>Making you Look Good</p>
         <p>Is In Our Heritage</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
             Perspiciatis consequuntur,</p>
-            <button>Executive Services</button>
+           
     </div>
-   
-    <div class="sixth">
-        <div>
-            <img src="./images/mens-facial-treatment.jpg" height="150px" alt="">
-            <p>Face Treatment</p>
-            <p>KSH: 1200 <span style="font-style:italic;">in person</span</p>
-            <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
+  
+    <div class="sixth container" >
+     <div class="row justify-content-around">  
+          <div class="lastie col-12 text-center">Executive Services</div>
+            <div class="col-md-4">
+                <img src="./images/mens-facial-treatment.jpg" height="150px" alt="">
+                <p>Face Treatment</p>
+                <p>KSH: 1200 <span style="font-style:italic;">in person</span</p>
+                <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
-        </div>
-        <div>
-            <img src="./images/massa.jpg" height="150px" alt="">
-            <p>Body Massage</p>
-            <p>KSH: 1300 <span style="font-style:italic;">in person</span></p>
-            <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
+            </div>
+            <div class="col-md-4">
+                <img src="./images/massa.jpg" height="150px" alt="">
+                <p>Body Massage</p>
+                <p>KSH: 1300 <span style="font-style:italic;">in person</span></p>
+                <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
-        </div>
-        <div>
-            <img src="./images/young-african-man-receiving-forehead-260nw-413268244.jpg"
-             height="150px" alt="">
-            <p>Face Treatment</p>
-            <p>KSH: 1100 <span style="font-style:italic;">in person</span></p>
-            <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
+            </div>
+            <div class="col-md-4">
+                <img src="./images/young-african-man-receiving-forehead-260nw-413268244.jpg"
+                height="150px" alt="">
+                <p>Face Treatment</p>
+                <p>KSH: 1100 <span style="font-style:italic;">in person</span></p>
+                <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
+            </div>
         </div>
     </div>
     <footer>
