ft:div-element added the fifth div with a clear description of our servises

--- a/barber_section.html
+++ b/barber_section.html
@@ -125,7 +125,7 @@
         height="200px" alt="">
 
     </div> 
-    <!-- <div class="fifth">
+     <div class="fifth">
         <p>Making you Look Good</p>
         <p>Is In Our Heritage</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -133,7 +133,7 @@
            
     </div>
   
-    <div class="sixth container" >
+  <!-- <div class="sixth container" >
      <div class="row justify-content-around">  
           <div class="lastie col-12 text-center">Executive Services</div>
             <div class="col-md-4">
