--- a/barber_section.html
+++ b/barber_section.html
@@ -133,7 +133,7 @@
            
     </div>
   
-  <!-- <div class="sixth container" >
+   <div class="sixth container" >
      <div class="row justify-content-around">  
           <div class="lastie col-12 text-center">Executive Services</div>
             <div class="col-md-4">
