ft: div-element optimised the last div appearance

--- a/barber_section.html
+++ b/barber_section.html
@@ -51,10 +51,10 @@
         <img src="./images/about.jpg"  alt="">
         <h2>Welcome To Guris Parlour</h2>
         <p>About our Premium Barber Services</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Perspiciatis consequuntur, eligendi esse, deserunt eveniet sed qui 
+        <p>Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. 
+            Perspiciatis consequuntur,<br> eligendi esse, deserunt eveniet sed qui <br> 
             quidem, numquam porro nemo fugiat est .</p>
-            <button id="read">Read More</button>
+            <button>Read More</button>
 
     </div>
 
@@ -82,17 +82,17 @@
         <div class="third2">
                     <div>
                         <img src="./images/Screenshot from 2022-02-08 00-00-37.png" height="" alt="">
-                        <H3>Hair straightening</H3>
+                        <H3>Hair coloring</H3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
                     </div>
                     <div>
                         <img src="./images/Screenshot from 2022-02-08 00-00-47.png" height="" alt="">
-                        <H3>Haircut Styling</H3>
+                        <H3>Hair Locking</H3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
                     </div>
                     <div>
                         <img src="./images/Screenshot from 2022-02-07 23-59-39.png" height="" alt="">
-                        <H3>Haircut Styling</H3>
+                        <H3>Haircut </H3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
                     </div>
                 </div>
@@ -104,12 +104,12 @@
             </div>
             <div>
                 <img src="./images/Screenshot from 2022-02-08 00-00-47.png" height="" alt="">
-                <H3>Haircut Styling</H3>
+                <H3>Beard Coloring</H3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
             </div>
             <div>
                 <img src="./images/Screenshot from 2022-02-07 23-59-39.png" height="" alt="">
-                <H3>Haircut Styling</H3>
+                <H3>Head Massage</H3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
             </div>
          </div>
@@ -133,24 +133,24 @@
            
     </div>
   
-   <div class="sixth container" >
+   <div class="sixth container-fluid" >
      <div class="row justify-content-around">  
           <div class="lastie col-12 text-center">Executive Services</div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <img src="./images/mens-facial-treatment.jpg" height="150px" alt="">
                 <p>Face Treatment</p>
                 <p>KSH: 1200 <span style="font-style:italic;">in person</span</p>
                 <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <img src="./images/massa.jpg" height="150px" alt="">
                 <p>Body Massage</p>
                 <p>KSH: 1300 <span style="font-style:italic;">in person</span></p>
                 <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <img src="./images/young-african-man-receiving-forehead-260nw-413268244.jpg"
                 height="150px" alt="">
                 <p>Face Treatment</p>
@@ -175,5 +175,5 @@
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-</body> -->
+</body> 
 </html>
