st :div-element optimised thhe div assigning for beter appearance

--- a/barber_section.html
+++ b/barber_section.html
@@ -35,10 +35,10 @@
                     </li>
                 </ul>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="submit">Register</button>
                 </form>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="submit">Login</button>
                 </form>
             </div>
         </div>
