--- a/login.html
+++ b/login.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="stylesheet" href="./css/login.css">
+
+    
+    <link rel="stylesheet" href="./CSS/login.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Login</title>
@@ -46,7 +48,6 @@
         </div>
       </nav>
     <!--End Navbar-->
-
     <!--Page Wrapper-->
     <div class="page-wrapper">
         <!--Navbar-->
