--- a/barber_section.html
+++ b/barber_section.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="stylesheet" href="barber_style.css" type="text/css">
+    <link rel="stylesheet" href="./CSS/barber_style.css" type="text/css">
     <title>Barber Section</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -35,10 +35,10 @@
                     </li>
                 </ul>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Register</button>
+                   <a href="register_section.html"> <button class="btn btn-outline-success" type="submit">Register</button></a>
                 </form>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Login</button>
+                    <a href="login.html"><button class="btn btn-outline-success" type="submit">Login</button></a>
                 </form>
             </div>
         </div>
@@ -136,21 +136,21 @@
    <div class="sixth container-fluid" >
      <div class="row justify-content-around">  
           <div class="lastie col-12 text-center">Executive Services</div>
-            <div class="col-md-3">
+            <div class="col-md-3 serv">
                 <img src="./images/mens-facial-treatment.jpg" height="150px" alt="">
                 <p>Face Treatment</p>
                 <p>KSH: 1200 <span style="font-style:italic;">in person</span</p>
                 <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 serv">
                 <img src="./images/massa.jpg" height="150px" alt="">
                 <p>Body Massage</p>
                 <p>KSH: 1300 <span style="font-style:italic;">in person</span></p>
                 <p>KSH: 2000 <span style="font-style:italic;">out person</span></p>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 serv">
                 <img src="./images/young-african-man-receiving-forehead-260nw-413268244.jpg"
                 height="150px" alt="">
                 <p>Face Treatment</p>
@@ -160,9 +160,46 @@
             </div>
         </div>
     </div>
-    <footer>
-      <p>hhhhhhhhhh</p>
-    </footer>
+<div class="container-fluid py-4 contactInfo">
+        <div class="row justify-content-around">
+            <div class="col-md-3">
+                <address>
+                    <h5><u>OUR ADDRESS</u></h5>
+                    <p>P.O.BOX 423-00100</p>
+                    <p>543 Ngong Lane</p>
+                    <p>Nairobi, Kenya</p>
+                </address>
+            </div>
+            <div class="col-md-4 get-touch">
+                <h5><u>GET IN TOUCH</u></h5>
+                <p>Call: <a href="tel:+254712464800"><i class="fa-solid fa-phone"></i> </i> +254(0) 712464800</a></p>
+                <p>WhatsApp: </i> <a href="tel:+254712464800"><i class="fab fa-whatsapp"> </i>+254(0) 712464800</a></p>
+                <p>Email: <a href="mailto:guris.parlour@gmail.com"><i class="fa-solid fa-envelope"></i> guris.parlour@gmail.com</a></p>
+            </div>
+            <div class="col-md-3 links">
+                <h5 class="px-3"><u>LINKS</u></h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">Log In</a></li>
+                    </ul>
+            </div>
+        </div>
+    </div>
+     <footer class="container-fluid bg-dark">
+            <div class="row">
+                <div class="col-md-6 py-2 text-center"><p>GURI'S <span>PARLOUR</span> &copy 2022. All Rigts Reserved.</p></div>
+                <div class="col-md-6 py-2 text-center socials">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </footer>
+      
+   
 
 
 
