pt: linked navbar buttons

--- a/login.html
+++ b/login.html
@@ -39,10 +39,10 @@
                     </li>
                 </ul>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="submit"><a href="register_section.html">Register</a></button>
                 </form>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="submit"><a href="register_section.html">Login</a></button>
                 </form>
             </div>
         </div>
