--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto" id="list">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
                      </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">SERVICES</a>
@@ -39,10 +39,10 @@
                     </li>
                 </ul>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit"><a href="register_section.html">Register</a></button>
+                    <button class="btn btn-outline-success" type="submit">Register</button>
                 </form>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit"><a href="login.html">Login</a></button>
+                    <button class="btn btn-outline-success" type="submit">Login</button>
                 </form>
             </div>
         </div>
