pt: fixed login, register buttons links

--- a/login.html
+++ b/login.html
@@ -39,10 +39,10 @@
                     </li>
                 </ul>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Register</button>
+                    <a href="register_section.html"><button class="btn btn-outline-success" type="submit">Register</button></a>
                 </form>
                 <form class="d-flex p-2 bttn">
-                    <button class="btn btn-outline-success" type="submit">Login</button>
+                    <a href="login.html"><button class="btn btn-outline-success" type="submit">Login</button></a>
                 </form>
             </div>
         </div>
@@ -70,9 +70,9 @@
 
                 <input type="submit" id="loginbtn" name="" value="Login" onclick="validate">
 
-                <p id="forgot"><a href="#">Forgot Password?</a></p>
+                <p id="forgot"><a href="register_section.html">Forgot Password?</a></p>
                 <br>
-                <p id="dont">Don't have an account? <a href="#">Register</a></p>
+                <p id="dont">Don't have an account? <a href="register_section.html">Register</a></p>
             </form>
         </div>
         <!--End Form-->
