login.html linked

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </form>
 
                 <form class="d-flex p-2 bttn">
-                    <a href="Login - login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
+                    <a href="login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
                 </form>
 
             </div>
