--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto" id="list">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                      </li>
 
                     <li class="nav-item">
@@ -55,7 +55,7 @@
                 </form>
 
                 <form class="d-flex p-2 bttn">
-                    <a href="Login - login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
+                    <a href="login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
                 </form>
 
             </div>
@@ -75,7 +75,7 @@
             <div class="col-md-6 text-center align-items-center">
 
                 <p class="lead pt-5">NEED YOU HAIR & NAIL <br>DONE BY PROFESSIONALS? <br>YOU ARE IN THE RIGHT <br>PLACE ...</p>
-                <a href="salon.html"><button class="btn btn-primary btn-lg">Explore</button></a>
+                <a href="Salon.html"><button class="btn btn-primary btn-lg">Explore</button></a>
 
             </div>
 
