--- a/register_section.html
+++ b/register_section.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto" id="list">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">SERVICES</a>
