--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 </ul>
 
                 <form class="d-flex p-2 bttn">
-                    <a href="register_section.html"><button class="btn btn-outline-success butn" type="submit">REGISTER</button></a>
+                    <button class="btn btn-outline-success butn" type="submit"><a href="register_section.html">REGISTER</a></button>
                 </form>
 
                 <form class="d-flex p-2 bttn">
-                    <a href="login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
+                    <button class="btn btn-outline-success butn" type="submit"><a href="login.html">LOG IN</a></button>
                 </form>
 
             </div>
