--- a/partners.html
+++ b/partners.html
@@ -61,13 +61,13 @@
     <p id="rust">THE <span style="color: #FE00FF;">TEAM</span> </p>
         <div class="second1">
             <div>
-                <img src="../images/CROP_1637176140839.jpg"  Height ="200px"alt="">
+                <img src="./images/CROP_1637176140839.jpg"  Height ="200px"alt="">
                 <p>Charles Okunzo</p>
                 <p>Barber</p>
                     <p>More ...</p>
             </div>
             <div>
-                <img src="../images/IMG20210703164818_00.jpg" height="200px" weight="" alt="">
+                <img src="./images/IMG20210703164818_00.jpg" height="200px" weight="" alt="">
                 <p>William Owalla</p>
                 <p>Masseur</p>
                 <p>More ...</p>
@@ -75,13 +75,13 @@
         </div>
         <div class="second2">
                 <div>
-                    <img src="../images/20220210_104746.jpg" height="200px" alt="">
+                    <img src="./images/20220210_104746.jpg" height="200px" alt="">
                     <p>Milcah Muraguri</p>
                     <p>Hair Stylist</p>
                     <p>More ...</p>
                </div>
                <div>
-                <img src="../images/IMG-20211118-WA0055.jpg" height="200px" alt="">
+                <img src="./images/IMG-20211118-WA0055.jpg" height="200px" alt="">
                 <p>Arnold Owuor</p>
                 <p>Manucurist</p>
                 <p>More ...</p>
@@ -89,13 +89,13 @@
             </div>
             <div class="second3">
                 <div>
-                    <img src="../images/IMG_20201124_121708-removebg-preview.png" height="200px" alt="">
+                    <img src="./images/IMG_20201124_121708-removebg-preview.png" height="200px" alt="">
                     <p>Agnes Kaswii</p>
                     <p>Dreads locking</p>
                     <p>More ...</p>
                 </div>
                 <div>
-                    <img src="../images/IMG-20201230-WA0000.jpg"  height = "200px"alt="">
+                    <img src="./images/IMG-20201230-WA0000.jpg"  height = "200px"alt="">
                     <p>Lorna Mwai</p>
                     <p>Pedicurist</p>
                     <p>More ...</p>
