--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
                 </ul>
 
-                <form class="d-flex p-2 bttn">
+                <form class="d-flex p-2 bttn" id="register">
                     <a href="register_section.html"><button class="btn btn-outline-success butn" type="submit">REGISTER</button></a>
                 </form>
 
-                <form class="d-flex p-2 bttn">
+                <form class="d-flex p-2 bttn" id="btnlogin">
                   <a href="login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
                 </form>
 
@@ -312,6 +312,7 @@
     </div>
 
     <!-- End of footer. Also marks the end of landing page! -->
+    <script src="./JS/register.js"
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
