--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
                 </ul>
 
-                <form class="d-flex p-2 bttn" id="register">
-                    <a href="register_section.html"><button class="btn btn-outline-success butn" type="submit">REGISTER</button></a>
+                <form class="d-flex p-2 bttn" >
+                   <button id="register class="btn btn-outline-success butn" type="submit">REGISTER</button>
                 </form>
 
-                <form class="d-flex p-2 bttn" id="btnlogin">
-                  <a href="login.html"><button class="btn btn-outline-success butn" type="submit">LOG IN</button></a>
+                <form class="d-flex p-2 bttn" >
+                  <button id="btnlogin" class="btn btn-outline-success butn" type="submit">LOG IN</button>
                 </form>
 
             </div>
